Add US capacities for 2025-05

--- a/config/zones/US-CAL-BANC.yaml
+++ b/config/zones/US-CAL-BANC.yaml
@@ -113,6 +113,9 @@ capacity:
     - datetime: '2024-01-01'
       source: EIA.gov
       value: 337.0
+    - datetime: '2025-05-01'
+      source: EIA.gov
+      value: 338.6
   unknown:
     - datetime: '2017-01-01'
       source: EIA.gov
