--- a/config/zones/US-NW-PACE.yaml
+++ b/config/zones/US-NW-PACE.yaml
@@ -266,8 +266,7 @@ delays:
   consumption: 30
   consumptionForecast: 30
   production: 48
-disclaimer:
-  This zone includes all gas related electricity production from the generation-only balancing authority Avangrid Renewables, LLC. Read
+disclaimer: This zone includes all gas related electricity production from the generation-only balancing authority Avangrid Renewables, LLC. Read
   more on the zone definition wiki page.
 emissionFactors:
   direct:
