--- a/config/zones/US-SW-SRP.yaml
+++ b/config/zones/US-SW-SRP.yaml
@@ -77,6 +77,9 @@ capacity:
     - datetime: '2025-04-01'
       source: EIA.gov
       value: 8442.1
+    - datetime: '2025-05-01'
+      source: EIA.gov
+      value: 7759.3
   geothermal:
     - datetime: '2017-01-01'
       source: EIA.gov
@@ -106,6 +109,9 @@ capacity:
     - datetime: '2025-01-01'
       source: EIA.gov
       value: 0.0
+    - datetime: '2025-05-01'
+      source: EIA.gov
+      value: 163.2
   solar:
     - datetime: '2017-01-01'
       source: EIA.gov
@@ -170,8 +176,7 @@ delays:
   consumption: 30
   consumptionForecast: 30
   production: 48
-disclaimer:
-  This zone includes all electricity production from the generation-only balancing authorities Arlington Valley, LLC - AVBA and New
+disclaimer: This zone includes all electricity production from the generation-only balancing authorities Arlington Valley, LLC - AVBA and New
   Harquahala Generating Company, LLC - HGBA. Read more on the wiki page.
 emissionFactors:
   direct:
