--- a/config/zones/US-FLA-TEC.yaml
+++ b/config/zones/US-FLA-TEC.yaml
@@ -77,6 +77,9 @@ capacity:
     - datetime: '2025-03-01'
       source: EIA.gov
       value: 6123.9
+    - datetime: '2025-05-01'
+      source: EIA.gov
+      value: 6220.9
   geothermal:
     - datetime: '2017-01-01'
       source: EIA.gov
