--- a/config/zones/US-NW-PACW.yaml
+++ b/config/zones/US-NW-PACW.yaml
@@ -146,6 +146,9 @@ capacity:
     - datetime: '2025-03-01'
       source: EIA.gov
       value: 480.8
+    - datetime: '2025-05-01'
+      source: EIA.gov
+      value: 483.8
   unknown:
     - datetime: '2017-01-01'
       source: EIA.gov
