--- a/config/zones/US-NW-WACM.yaml
+++ b/config/zones/US-NW-WACM.yaml
@@ -221,6 +221,9 @@ capacity:
     - datetime: '2025-03-01'
       source: EIA.gov
       value: 549.4
+    - datetime: '2025-05-01'
+      source: EIA.gov
+      value: 567.3
   unknown:
     - datetime: '2017-01-01'
       source: EIA.gov
