--- a/config/zones/US-SW-WALC.yaml
+++ b/config/zones/US-SW-WALC.yaml
@@ -131,8 +131,7 @@ delays:
   consumption: 30
   consumptionForecast: 30
   production: 48
-disclaimer:
-  This zone includes all electricity production from the generation-only balancing authority Griffith Energy, LLC. Read more on the
+disclaimer: This zone includes all electricity production from the generation-only balancing authority Griffith Energy, LLC. Read more on the
   zone definition wiki page.
 emissionFactors:
   direct:
