--- a/config/zones/US-TEX-ERCO.yaml
+++ b/config/zones/US-TEX-ERCO.yaml
@@ -167,6 +167,9 @@ capacity:
     - datetime: '2025-04-01'
       source: EIA.gov
       value: 8482.2
+    - datetime: '2025-05-01'
+      source: EIA.gov
+      value: 8745.7
   biomass:
     - datetime: '2017-01-01'
       source: EIA.gov
@@ -614,6 +617,9 @@ capacity:
     - datetime: '2025-04-01'
       source: EIA.gov
       value: 24355.4
+    - datetime: '2025-05-01'
+      source: EIA.gov
+      value: 24655.4
   unknown:
     - datetime: '2017-01-01'
       source: EIA.gov
@@ -796,6 +802,9 @@ capacity:
     - datetime: '2025-03-01'
       source: EIA.gov
       value: 38821.2
+    - datetime: '2025-05-01'
+      source: EIA.gov
+      value: 39227.4
 comment: Electric Reliability Council Of Texas, Inc.
 contributors:
   - systemcatch
