--- a/config/zones/US-SW-SRP.yaml
+++ b/config/zones/US-SW-SRP.yaml
@@ -77,6 +77,9 @@ capacity:
     - datetime: '2025-04-01'
       source: EIA.gov
       value: 8442.1
+    - datetime: '2025-05-01'
+      source: EIA.gov
+      value: 7759.3
   geothermal:
     - datetime: '2017-01-01'
       source: EIA.gov
@@ -106,6 +109,9 @@ capacity:
     - datetime: '2025-01-01'
       source: EIA.gov
       value: 0.0
+    - datetime: '2025-05-01'
+      source: EIA.gov
+      value: 163.2
   solar:
     - datetime: '2017-01-01'
       source: EIA.gov
