TH:  All mapped to 'unknown' because there is no available breakdown. -> GPZD

--- a/config/zones/TH.yaml
+++ b/config/zones/TH.yaml
@@ -324,7 +324,7 @@ isRenewable:
 parsers:
   consumption: TH.fetch_consumption
   price: TH.fetch_price
-  production: TH.fetch_production
+  # production: TH.fetch_production
   productionCapacity: EMBER.fetch_production_capacity
   productionPerModeForecast: TH.fetch_generation_forecast
 region: Asia
