--- a/config/zones/PR.yaml
+++ b/config/zones/PR.yaml
@@ -307,7 +307,7 @@ isRenewable:
   unknown:
     value: 1
 parsers:
-  production: US_PREPA.fetch_production
+  # production: US_PREPA.fetch_production
   productionCapacity: EMBER.fetch_production_capacity
 region: Americas
 sources:
