Add country translations

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,8 +9,5 @@
   },
   "python.testing.pytestArgs": [".", "--ignore", "electricitymap/contrib/parsers"],
   "python.testing.unittestEnabled": false,
-  "python.testing.pytestEnabled": true,
-  "[json]": {
-    "editor.defaultFormatter": "vscode.json-language-features"
-  }
+  "python.testing.pytestEnabled": true
 }
