--- a/config/zones/FR-BRE.yaml
+++ b/config/zones/FR-BRE.yaml
@@ -13,6 +13,8 @@ capacity:
 contributors:
   - AilinvandenHonigkuchenpferdlande
   - corradio
+  - Bastien Bigué
+  - Paul Romieu
 parsers:
   production: ECO2MIX.fetch_production
 timezone: Europe/Paris
