comment parsers for FR exchanges

--- a/config/exchanges/DE_FR.yaml
+++ b/config/exchanges/DE_FR.yaml
@@ -2,6 +2,6 @@ lonlat:
   - 8.048297
   - 48.931337
 parsers:
-  exchange: ENTSOE.fetch_exchange
+  # exchange: ENTSOE.fetch_exchange
   exchangeForecast: ENTSOE.fetch_exchange_forecast
 rotation: -110
