--- a/config/exchanges/BE_FR.yaml
+++ b/config/exchanges/BE_FR.yaml
@@ -2,6 +2,6 @@ lonlat:
   - 4.137165
   - 50.255806
 parsers:
-  exchange: ENTSOE.fetch_exchange
+  # exchange: ENTSOE.fetch_exchange
   exchangeForecast: ENTSOE.fetch_exchange_forecast
 rotation: -135
