--- a/config/exchanges/CH_FR.yaml
+++ b/config/exchanges/CH_FR.yaml
@@ -2,6 +2,6 @@ lonlat:
   - 6.5
   - 46.7
 parsers:
-  exchange: ENTSOE.fetch_exchange
+  # exchange: ENTSOE.fetch_exchange
   exchangeForecast: ENTSOE.fetch_exchange_forecast
 rotation: -90
