--- a/config/exchanges/ES_FR.yaml
+++ b/config/exchanges/ES_FR.yaml
@@ -5,6 +5,6 @@ lonlat:
   - 0.3
   - 42.9
 parsers:
-  exchange: ENTSOE.fetch_exchange
+  # exchange: ENTSOE.fetch_exchange
   exchangeForecast: ENTSOE.fetch_exchange_forecast
 rotation: 20
