--- a/config/exchanges/FR_IT-NO.yaml
+++ b/config/exchanges/FR_IT-NO.yaml
@@ -5,6 +5,6 @@ lonlat:
   - 6.9
   - 44.4
 parsers:
-  exchange: ENTSOE.fetch_exchange
+  # ewxchange: ENTSOE.fetch_exchange
   exchangeForecast: ENTSOE.fetch_exchange_forecast
 rotation: 70
