--- a/config/zones/FR.yaml
+++ b/config/zones/FR.yaml
@@ -629,6 +629,7 @@ parsers:
   production: FR.fetch_production
   productionCapacity: ENTSOE.fetch_production_capacity
   productionPerModeForecast: ENTSOE.fetch_wind_solar_forecasts
+  generationOutages: ENTSOE.fetch_generation_outages
 region: Europe
 sources:
   EU-ETS, ENTSO-E 2021:
