Update CA-ON.yaml new nuclear data for 2025

--- a/config/zones/CA-ON.yaml
+++ b/config/zones/CA-ON.yaml
@@ -23,6 +23,9 @@ capacity:
       source: ieso.ca
       value: 8868.0
   nuclear:
+    - datetime: '2025-03-01'
+      source: ieso.ca
+      value: 12184.0
     - datetime: '2023-12-01'
       source: ieso.ca
       value: 13144.0
