--- a/mobileapp/package.json
+++ b/mobileapp/package.json
@@ -26,7 +26,8 @@
     "@capacitor/app": "^7.0.1",
     "@capacitor/core": "^7.4.2",
     "@capacitor/ios": "^7.4.2",
-    "@capacitor/share": "^7.0.1"
+    "@capacitor/share": "^7.0.1",
+    "@capacitor/status-bar": "^7.0.2"
   },
   "devDependencies": {
     "@capacitor/assets": "^1.0.14",
