--- a/mobileapp/android/app/capacitor.build.gradle
+++ b/mobileapp/android/app/capacitor.build.gradle
@@ -12,6 +12,7 @@ dependencies {
     implementation project(':capacitor-app')
     implementation project(':capacitor-share')
     implementation project(':capacitor-status-bar')
+    implementation project(':capacitor-plugin-safe-area')
 
 }
 
