--- a/web/package.json
+++ b/web/package.json
@@ -85,6 +85,7 @@
     "@visx/group": "^3.12.0",
     "@visx/shape": "^3.12.0",
     "@visx/text": "^3.12.0",
+    "capacitor-plugin-safe-area": "^4.0.0",
     "country-flag-icons": "^1.5.19",
     "currency-symbol-map": "^5.1.0",
     "d3-array": "^3.2.4",
