--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,8 +4,7 @@ version = "1.0.1"
 description = ""
 license = "AGPL-3.0-or-later"
 authors = ["Electricity Maps <app@electricitymaps.com>"]
-packages = [{ include = "electricitymap" }]
-include = ["config/**/*.json", "config/**/*.yaml"]
+packages = [{ include = "electricitymap" }, { include = "config" }]
 
 [tool.poetry.dependencies]
 python = '>= 3.10, < 3.11'
