--- a/config/zones/NO-NO3.yaml
+++ b/config/zones/NO-NO3.yaml
@@ -379,4 +379,5 @@ sources:
 timezone: Europe/Oslo
 zone_name: Middle Norway
 country_name: Norway
-currency: NOK
+# Electricity is traded in EUR
+currency: EUR
