--- a/config/zones/NO-NO5.yaml
+++ b/config/zones/NO-NO5.yaml
@@ -364,4 +364,5 @@ sources:
 timezone: Europe/Oslo
 zone_name: West Norway
 country_name: Norway
-currency: NOK
+# Electricity is traded in EUR
+currency: EUR
