--- a/config/zones/NO.yaml
+++ b/config/zones/NO.yaml
@@ -319,4 +319,5 @@ subZoneNames:
 timezone: Europe/Oslo
 zone_name: Norway
 country_name: Norway
-currency: NOK
+# Electricity is traded in EUR
+currency: EUR
