--- a/config/zones/SE-SE2.yaml
+++ b/config/zones/SE-SE2.yaml
@@ -401,4 +401,5 @@ sources:
 timezone: Europe/Stockholm
 zone_name: North Central Sweden
 country_name: Sweden
-currency: SEK
+# Electricity is traded in EUR
+currency: EUR
