--- a/config/zones/SE-SE3.yaml
+++ b/config/zones/SE-SE3.yaml
@@ -403,4 +403,5 @@ sources:
 timezone: Europe/Stockholm
 zone_name: South Central Sweden
 country_name: Sweden
-currency: SEK
+# Electricity is traded in EUR
+currency: EUR
