--- a/config/zones/SE-SE4.yaml
+++ b/config/zones/SE-SE4.yaml
@@ -388,4 +388,5 @@ sources:
 timezone: Europe/Stockholm
 zone_name: South Sweden
 country_name: Sweden
-currency: SEK
+# Electricity is traded in EUR
+currency: EUR
