--- a/config/zones/SE.yaml
+++ b/config/zones/SE.yaml
@@ -521,4 +521,5 @@ subZoneNames:
 timezone: Europe/Stockholm
 zone_name: Sweden
 country_name: Sweden
-currency: SEK
+# Electricity is traded in EUR
+currency: EUR
