--- a/config/zones/DK-DK1.yaml
+++ b/config/zones/DK-DK1.yaml
@@ -540,4 +540,5 @@ sources:
 timezone: Europe/Copenhagen
 zone_name: West Denmark
 country_name: Denmark
-currency: DKK
+# Electricity is traded in EUR
+currency: EUR
