--- a/config/zones/DK-DK2.yaml
+++ b/config/zones/DK-DK2.yaml
@@ -525,4 +525,5 @@ sources:
 timezone: Europe/Copenhagen
 zone_name: East Denmark
 country_name: Denmark
-currency: DKK
+# Electricity is traded in EUR
+currency: EUR
