--- a/config/zones/DK.yaml
+++ b/config/zones/DK.yaml
@@ -339,4 +339,5 @@ subZoneNames:
 timezone: Europe/Copenhagen
 zone_name: Denmark
 country_name: Denmark
-currency: DKK
+# Electricity is traded in EUR
+currency: EUR
