--- a/config/zones/NO-NO1.yaml
+++ b/config/zones/NO-NO1.yaml
@@ -370,4 +370,5 @@ sources:
 timezone: Europe/Oslo
 zone_name: Southeast Norway
 country_name: Norway
-currency: NOK
+# Electricity is traded in EUR
+currency: EUR
