--- a/config/zones/NO-NO2.yaml
+++ b/config/zones/NO-NO2.yaml
@@ -376,4 +376,5 @@ sources:
 timezone: Europe/Oslo
 zone_name: Southwest Norway
 country_name: Norway
-currency: NOK
+# Electricity is traded in EUR
+currency: EUR
