--- a/config/zones/ES.yaml
+++ b/config/zones/ES.yaml
@@ -437,6 +437,7 @@ parsers:
   consumptionForecast: ENTSOE.fetch_consumption_forecast
   generationForecast: ENTSOE.fetch_generation_forecast
   price: ENTSOE.fetch_price
+  # priceIntraday: ENTSOE.fetch_price_intraday
   production: ENTSOE.fetch_production
   productionCapacity: REE.fetch_production_capacity
   productionPerModeForecast: ENTSOE.fetch_wind_solar_forecasts
