--- a/config/exchanges/NO-NO1_SE-SE3.yaml
+++ b/config/exchanges/NO-NO1_SE-SE3.yaml
@@ -5,6 +5,6 @@ lonlat:
   - 12.254138
   - 61.008235
 parsers:
-  exchange: NORDPOOL.fetch_exchange
+  exchange: ENTSOE.fetch_exchange
   exchangeForecast: ENTSOE.fetch_exchange_forecast
 rotation: 90
