--- a/config/exchanges/NO-NO2_NO-NO5.yaml
+++ b/config/exchanges/NO-NO2_NO-NO5.yaml
@@ -5,6 +5,6 @@ lonlat:
   - 7.461
   - 60.0
 parsers:
-  exchange: NORDPOOL.fetch_exchange
+  exchange: ENTSOE.fetch_exchange
   exchangeForecast: ENTSOE.fetch_exchange_forecast
 rotation: -10
