--- a/config/exchanges/NO-NO4_SE-SE2.yaml
+++ b/config/exchanges/NO-NO4_SE-SE2.yaml
@@ -5,6 +5,6 @@ lonlat:
   - 14.051
   - 64.913
 parsers:
-  exchange: NORDPOOL.fetch_exchange
+  exchange: ENTSOE.fetch_exchange
   exchangeForecast: ENTSOE.fetch_exchange_forecast
 rotation: 130
