--- a/config/exchanges/SE-SE3_SE-SE4.yaml
+++ b/config/exchanges/SE-SE3_SE-SE4.yaml
@@ -5,6 +5,6 @@ lonlat:
   - 14.5
   - 57.2
 parsers:
-  exchange: NORDPOOL.fetch_exchange
+  exchange: ENTSOE.fetch_exchange
   exchangeForecast: ENTSOE.fetch_exchange_forecast
 rotation: 180
