--- a/config/zones/LT.yaml
+++ b/config/zones/LT.yaml
@@ -106,6 +106,9 @@ capacity:
     - datetime: '2025-08-04'
       source: litgrid.eu
       value: 2725
+    - datetime: '2025-10-13'
+      source: litgrid.eu
+      value: 2936
   unknown:
     - datetime: '2017-01-01'
       source: entsoe.eu
@@ -159,6 +162,9 @@ capacity:
     - datetime: '2025-08-04'
       source: litgrid.eu
       value: 1890
+    - datetime: '2025-10-13'
+      source: litgrid.eu
+      value: 2467
 contributors:
   - corradio
   - nessie2013
