--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -13,7 +13,7 @@ on:
           - major
 jobs:
   create-release:
-    runs-on: ubuntu-latest
+    runs-on: carbonrunner-2vcpu-ubuntu-latest
     timeout-minutes: 10
     # Add "id-token" with the intended permissions.
     permissions:
