--- a/.github/workflows/deploy_staging.yml
+++ b/.github/workflows/deploy_staging.yml
@@ -5,7 +5,7 @@ on:
 
 jobs:
   deploy:
-    runs-on: ubuntu-24.04-arm
+    runs-on: carbonrunner-2vcpu-ubuntu-latest
     permissions:
       contents: read
       deployments: write
