--- a/.github/workflows/earthly-contrib.yml
+++ b/.github/workflows/earthly-contrib.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   run-tests:
-    runs-on: ubuntu-24.04-arm
+    runs-on: carbonrunner-2vcpu-ubuntu-latest
     env:
       EARTHLY_TOKEN: ${{ secrets.EARTHLY_TOKEN }}
       DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
