--- a/.github/workflows/label.yml
+++ b/.github/workflows/label.yml
@@ -10,7 +10,7 @@ on: [pull_request_target]
 
 jobs:
   label:
-    runs-on: ubuntu-24.04-arm
+    runs-on: carbonrunner-2vcpu-ubuntu-latest
 
     steps:
       - uses: actions/labeler@v6
