--- a/config/zones/CL.yaml
+++ b/config/zones/CL.yaml
@@ -6,7 +6,7 @@ bounding_box:
   - - -65.92080644399994
     - -17.006588197999946
 timezone: Pacific/Easter
-zone_name: Easter Island
+zone_name: Chile
 country_name: Chile
 currency: CLP
 subZoneNames:
