--- a/config/zones/NO-NO1.yaml
+++ b/config/zones/NO-NO1.yaml
@@ -7,46 +7,49 @@ capacity:
   biomass:
     - datetime: '2021-01-01'
       source: entsoe.eu
-      value: 34.0
+      value: 33.61
+    - datetime: '2025-01-01'
+      source: entsoe.eu
+      value: 33.7
   gas:
     - datetime: '2017-01-01'
       source: entsoe.eu
       value: 0.0
     - datetime: '2021-01-01'
       source: entsoe.eu
-      value: 6.0
+      value: 5.6
     - datetime: '2025-01-01'
       source: entsoe.eu
-      value: 7.0
+      value: 6.6
   hydro:
     - datetime: '2017-01-01'
       source: entsoe.eu
-      value: 3558.0
+      value: 3558.39
     - datetime: '2018-01-01'
       source: entsoe.eu
-      value: 3725.0
+      value: 3724.9100000000003
     - datetime: '2019-01-01'
       source: entsoe.eu
-      value: 3883.0
+      value: 3883.3999999999996
     - datetime: '2021-01-01'
       source: entsoe.eu
-      value: 3934.0
+      value: 3934.09
     - datetime: '2023-01-01'
       source: entsoe.eu
-      value: 3933.0
+      value: 3933.5299999999997
     - datetime: '2024-01-01'
       source: entsoe.eu
-      value: 3956.0
+      value: 3955.81
     - datetime: '2025-01-01'
       source: entsoe.eu
-      value: 4001.0
+      value: 4000.8999999999996
   solar:
     - datetime: '2024-01-01'
       source: entsoe.eu
-      value: 9.0
+      value: 9.07
     - datetime: '2025-01-01'
       source: entsoe.eu
-      value: 17.0
+      value: 16.7
   unknown:
     - datetime: '2017-01-01'
       source: entsoe.eu
@@ -57,20 +60,22 @@ capacity:
       value: 0.0
     - datetime: '2018-01-01'
       source: entsoe.eu
-      value: 112.0
+      value: 111.6
     - datetime: '2019-01-01'
       source: entsoe.eu
-      value: 166.0
+      value: 165.6
     - datetime: '2020-01-01'
       source: entsoe.eu
-      value: 222.0
+      value: 221.5
     - datetime: '2021-01-01'
       source: entsoe.eu
-      value: 385.0
+      value: 384.7
     - datetime: '2023-01-01'
       source: entsoe.eu
-      value: 406.0
+      value: 405.7
 country: 'NO'
+country_name: Norway
+currency: EUR
 delays:
   production: 7
 emissionFactors:
@@ -369,6 +374,3 @@ sources:
     link: https://www.ipcc.ch/site/assets/uploads/2018/02/ipcc_wg3_ar5_annex-iii.pdf#page=7
 timezone: Europe/Oslo
 zone_name: Southeast Norway
-country_name: Norway
-# Electricity is traded in EUR
-currency: EUR
