--- a/config/zones/GE.yaml
+++ b/config/zones/GE.yaml
@@ -6,6 +6,10 @@ bounding_box:
   - - 46.6379081561
     - 43.553104153
 capacity:
+  biomass:
+    - datetime: '2017-01-01'
+      source: Ember, Yearly electricity data
+      value: 0.0
   gas:
     - datetime: '2017-01-01'
       source: Ember, Yearly electricity data
