--- a/config/zones/GB.yaml
+++ b/config/zones/GB.yaml
@@ -18,9 +18,12 @@ capacity:
     - datetime: '2020-01-01'
       source: Ember, Yearly electricity data
       value: 6600
-    - datetime: '2024-01-01'
-      source: Ember, Yearly electricity data
-      value: 6700
+    - datetime: '2022-01-01'
+      source: bmreports.com
+      value: 4572
+    - datetime: '2023-01-01'
+      source: bmreports.com
+      value: 4438
   coal:
     - datetime: '2017-01-01'
       source: Ember, Yearly electricity data
