--- a/config/zones/IT-SIC.yaml
+++ b/config/zones/IT-SIC.yaml
@@ -67,7 +67,7 @@ capacity:
     - datetime: '2017-01-01'
       source: dati.terna.it
       value: 300
-    - datetime: 2020-01-01'
+    - datetime: '2020-01-01'
       source: dati.terna.it
       value: 200
 contributors:
