--- a/config/zones/SE-SE3.yaml
+++ b/config/zones/SE-SE3.yaml
@@ -37,7 +37,29 @@ capacity:
       value: 1130
   wind:
     - datetime: '2017-01-01'
-      value: 3678
+      value: 2115.89
+      source: energimyndigheten.se
+    - datetime: '2018-01-01'
+      value: 2278.19
+      source: energimyndigheten.se
+    - datetime: '2019-01-01'
+      value: 2625.69
+      source: energimyndigheten.se
+    - datetime: '2020-01-01'
+      value: 2839.95
+      source: energimyndigheten.se
+    - datetime: '2021-01-01'
+      value: 3078.82
+      source: energimyndigheten.se
+    - datetime: '2022-01-01'
+      value: 3254.00
+      source: energimyndigheten.se
+    - datetime: '2023-01-01'
+      value: 3969.16
+      source: energimyndigheten.se
+    - datetime: '2024-01-01'
+      value: 4233.36
+      source: energimyndigheten.se
 country: SE
 delays:
   production: 7
